<resources>
    <string name="app_name">ComparaClima</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a_8_carac_may_s_y_n_m">Contraseña (8+ carac, Mayús y Núm)</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="identificate">Identifícate</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="no_tienes_cuenta_registrate_aqui">¿No tienes cuenta? Regístrate aquí</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nueva_comparaci_n">Nueva Comparación</string>
    <string name="mi_historial">MI HISTORIAL</string>
    <string name="compara_dos_ciudades">Compara dos ciudades</string>
    <string name="primera_ciudad_ej_cordoba">Primera ciudad (Ej: Cordoba)</string>
    <string name="vs">VS</string>
    <string name="segunda_ciudad_ej_almeria">Segunda ciudad (Ej: Almeria)</string>
    <string name="obtener_clima_y_comparar">OBTENER CLIMA Y COMPARAR</string>
    <string name="resultado_de_la_comparacion">Resultado de la Comparación</string>
    <string name="nueva_busqueda">NUEVA BÚSQUEDA</string>
    <string name="guardar_ajustes">GUARDAR AJUSTES</string>
    <string name="fecha">Fecha</string>
    <string name="ciudad1_vs_ciudad2">Ciudad1 vs Ciudad2</string>
    <string name="ganador">Ganador: Ciudad</string>
    <string name="nueva_comparacion">NUEVA COMPARACIÓN</string>
    <string name="hola_usuario">¡Hola, Usuario!</string>
    <string name="que_quieres_hacer_hoy">¿Qué quieres hacer hoy?</string>
    <string name="ajustes_de_gustos">AJUSTES DE GUSTOS</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="resultado">Resultado</string>
    <string name="temp_2">Temp 2</string>
    <string name="ciudad_2">Ciudad 2</string>
    <string name="temp_1">Temp 1</string>
    <string name="ciudad_1">Ciudad 1</string>
    <string name="cual_sera_tu_proximo_destino_ideal">¿Cuál será tu próximo destino ideal?</string>
    <string name="ajusta_tus_preferencias">AJUSTA TUS PREFERENCIAS</string>
</resources>